frontend/test/should_fail/array_sum.grg
function sum(ref a:array<string>) : double
{
	return(a.sum());
}